vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

    /**
     * Set the NSView handler where the media player should render its video output.<br>
     * Use the vout called "macosx".<br>
     * The drawable is an NSObject that follow the VLCOpenGLVideoViewEmbedding<br>
     * protocol:<br>
     * @begincode<br>
     * \@protocol VLCOpenGLVideoViewEmbedding <NSObject><br>
     * - (void)addVoutSubview:(NSView *)view;<br>
     * - (void)removeVoutSubview:(NSView *)view;<br>
     * \@end<br>
     * @endcode<br>
     * Or it can be an NSView object.<br>
     * If you want to use it along with Qt4 see the QMacCocoaViewContainer. Then<br>
     * the following code should work:<br>
     * @begincode<br>
     * {<br>
     *     NSView *video = [[NSView alloc] init];<br>
     *     QMacCocoaViewContainer *container = new QMacCocoaViewContainer(video, parent);<br>
     *     libvlc_media_player_set_nsobject(mp, video);<br>
     *     [video release];<br>
     * }<br>
     * @endcode<br>
     * You can find a live example in VLCVideoView in VLCKit.framework.<br>
     * \param p_mi the Media Player<br>
     * \param drawable the drawable that is either an NSView or an object following<br>
     * the VLCOpenGLVideoViewEmbedding protocol.<br>
     * Original signature : <code>void libvlc_media_player_set_nsobject(libvlc_media_player_t*, void*)</code><br>
     * <i>native declaration : line 1936</i>
     */
    void libvlc_media_player_set_nsobject(PointerByReference p_mi, Pointer drawable);
    /**
     * Get the NSView handler previously set with libvlc_media_player_set_nsobject().<br>
     * \param p_mi the Media Player<br>
     * \return the NSView handler or 0 if none where set<br>
     * Original signature : <code>void* libvlc_media_player_get_nsobject(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1944</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_get_nsobject(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    Pointer libvlc_media_player_get_nsobject(Pointer p_mi);
    /**
     * Get the NSView handler previously set with libvlc_media_player_set_nsobject().<br>
     * \param p_mi the Media Player<br>
     * \return the NSView handler or 0 if none where set<br>
     * Original signature : <code>void* libvlc_media_player_get_nsobject(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1944</i>
     */
    Pointer libvlc_media_player_get_nsobject(PointerByReference p_mi);
    /**
     * Set the agl handler where the media player should render its video output.<br>
     * \param p_mi the Media Player<br>
     * \param drawable the agl handler<br>
     * Original signature : <code>void libvlc_media_player_set_agl(libvlc_media_player_t*, uint32_t)</code><br>
     * <i>native declaration : line 1952</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_set_agl(com.sun.jna.ptr.PointerByReference, int)} instead
     */
    @Deprecated 
    void libvlc_media_player_set_agl(Pointer p_mi, int drawable);
    /**
     * Set the agl handler where the media player should render its video output.<br>
     * \param p_mi the Media Player<br>
     * \param drawable the agl handler<br>
     * Original signature : <code>void libvlc_media_player_set_agl(libvlc_media_player_t*, uint32_t)</code><br>
     * <i>native declaration : line 1952</i>
     */
    void libvlc_media_player_set_agl(PointerByReference p_mi, int drawable);
    /**
     * Get the agl handler previously set with libvlc_media_player_set_agl().<br>
     * \param p_mi the Media Player<br>
     * \return the agl handler or 0 if none where set<br>
     * Original signature : <code>uint32_t libvlc_media_player_get_agl(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1960</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_get_agl(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_media_player_get_agl(Pointer p_mi);
    /**
     * Get the agl handler previously set with libvlc_media_player_set_agl().<br>
     * \param p_mi the Media Player<br>
     * \return the agl handler or 0 if none where set<br>
     * Original signature : <code>uint32_t libvlc_media_player_get_agl(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1960</i>
     */
    int libvlc_media_player_get_agl(PointerByReference p_mi);
    /**
     * Set an X Window System drawable where the media player should render its<br>
     * video output. If LibVLC was built without X11 output support, then this has<br>
     * no effects.<br>
     * The specified identifier must correspond to an existing Input/Output class<br>
     * X11 window. Pixmaps are <b>not</b> supported. The caller shall ensure that<br>
     * the X11 server is the same as the one the VLC instance has been configured<br>
     * with. This function must be called before video playback is started;<br>
     * otherwise it will only take effect after playback stop and restart.<br>
     * \param p_mi the Media Player<br>
     * \param drawable the ID of the X window<br>
     * Original signature : <code>void libvlc_media_player_set_xwindow(libvlc_media_player_t*, uint32_t)</code><br>
     * <i>native declaration : line 1976</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_set_xwindow(com.sun.jna.ptr.PointerByReference, int)} instead
     */
    @Deprecated 
    void libvlc_media_player_set_xwindow(Pointer p_mi, int drawable);
    /**
     * Set an X Window System drawable where the media player should render its<br>
     * video output. If LibVLC was built without X11 output support, then this has<br>
     * no effects.<br>
     * The specified identifier must correspond to an existing Input/Output class<br>
     * X11 window. Pixmaps are <b>not</b> supported. The caller shall ensure that<br>
     * the X11 server is the same as the one the VLC instance has been configured<br>
     * with. This function must be called before video playback is started;<br>
     * otherwise it will only take effect after playback stop and restart.<br>
     * \param p_mi the Media Player<br>
     * \param drawable the ID of the X window<br>
     * Original signature : <code>void libvlc_media_player_set_xwindow(libvlc_media_player_t*, uint32_t)</code><br>
     * <i>native declaration : line 1976</i>
     */
    void libvlc_media_player_set_xwindow(PointerByReference p_mi, int drawable);
    /**
     * Get the X Window System window identifier previously set with<br>
     * libvlc_media_player_set_xwindow(). Note that this will return the identifier<br>
     * even if VLC is not currently using it (for instance if it is playing an<br>
     * audio-only input).<br>
     * \param p_mi the Media Player<br>
     * \return an X window ID, or 0 if none where set.<br>
     * Original signature : <code>uint32_t libvlc_media_player_get_xwindow(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1987</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_get_xwindow(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_media_player_get_xwindow(Pointer p_mi);
    /**
     * Get the X Window System window identifier previously set with<br>
     * libvlc_media_player_set_xwindow(). Note that this will return the identifier<br>
     * even if VLC is not currently using it (for instance if it is playing an<br>
     * audio-only input).<br>
     * \param p_mi the Media Player<br>
     * \return an X window ID, or 0 if none where set.<br>
     * Original signature : <code>uint32_t libvlc_media_player_get_xwindow(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1987</i>
     */
    int libvlc_media_player_get_xwindow(PointerByReference p_mi);
    /**
     * Set a Win32/Win64 API window handle (HWND) where the media player should<br>
     * render its video output. If LibVLC was built without Win32/Win64 API output<br>
     * support, then this has no effects.<br>
     * \param p_mi the Media Player<br>
     * \param drawable windows handle of the drawable<br>
     * Original signature : <code>void libvlc_media_player_set_hwnd(libvlc_media_player_t*, void*)</code><br>
     * <i>native declaration : line 1997</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_set_hwnd(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_media_player_set_hwnd(Pointer p_mi, Pointer drawable);
    /**
     * Set a Win32/Win64 API window handle (HWND) where the media player should<br>
     * render its video output. If LibVLC was built without Win32/Win64 API output<br>
     * support, then this has no effects.<br>
     * \param p_mi the Media Player<br>
     * \param drawable windows handle of the drawable<br>
     * Original signature : <code>void libvlc_media_player_set_hwnd(libvlc_media_player_t*, void*)</code><br>
     * <i>native declaration : line 1997</i>
     */
    void libvlc_media_player_set_hwnd(PointerByReference p_mi, Pointer drawable);
    /**
     * Get the Windows API window handle (HWND) previously set with<br>
     * libvlc_media_player_set_hwnd(). The handle will be returned even if LibVLC<br>
     * is not currently outputting any video to it.<br>
     * \param p_mi the Media Player<br>
     * \return a window handle or NULL if there are none.<br>
     * Original signature : <code>void* libvlc_media_player_get_hwnd(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2007</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_get_hwnd(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    Pointer libvlc_media_player_get_hwnd(Pointer p_mi);
    /**
     * Get the Windows API window handle (HWND) previously set with<br>
     * libvlc_media_player_set_hwnd(). The handle will be returned even if LibVLC<br>
     * is not currently outputting any video to it.<br>
     * \param p_mi the Media Player<br>
     * \return a window handle or NULL if there are none.<br>
     * Original signature : <code>void* libvlc_media_player_get_hwnd(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2007</i>
     */
    Pointer libvlc_media_player_get_hwnd(PointerByReference p_mi);
    /**
     * Set callbacks and private data for decoded audio.<br>
     * Use libvlc_audio_set_format() or libvlc_audio_set_format_callbacks()<br>
     * to configure the decoded audio format.<br>
     * \param mp the media player<br>
     * \param play callback to play audio samples (must not be NULL)<br>
     * \param pause callback to pause playback (or NULL to ignore)<br>
     * \param resume callback to resume playback (or NULL to ignore)<br>
     * \param flush callback to flush audio buffers (or NULL to ignore)<br>
     * \param drain callback to drain audio buffers (or NULL to ignore)<br>
     * \param opaque private pointer for the audio callbacks (as first parameter)<br>
     * \version LibVLC 2.0.0 or later<br>
     * Original signature : <code>void libvlc_audio_set_callbacks(libvlc_media_player_t*, libvlc_audio_play_cb, libvlc_audio_pause_cb, libvlc_audio_resume_cb, libvlc_audio_flush_cb, libvlc_audio_drain_cb, void*)</code><br>
     * <i>native declaration : line 2073</i><br>
     * @deprecated use the safer method {@link #libvlc_audio_set_callbacks(com.sun.jna.ptr.PointerByReference, libvlc.LibvlcLibrary.libvlc_audio_play_cb, libvlc.LibvlcLibrary.libvlc_audio_pause_cb, libvlc.LibvlcLibrary.libvlc_audio_resume_cb, libvlc.LibvlcLibrary.libvlc_audio_flush_cb, libvlc.LibvlcLibrary.libvlc_audio_drain_cb, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_audio_set_callbacks(Pointer mp, LibvlcLibrary.libvlc_audio_play_cb play, LibvlcLibrary.libvlc_audio_pause_cb pause, LibvlcLibrary.libvlc_audio_resume_cb resume, LibvlcLibrary.libvlc_audio_flush_cb flush, LibvlcLibrary.libvlc_audio_drain_cb drain, Pointer opaque);
